--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.0.17",
-    "tailwindcss": "^4.0.17",
+    "json-server": "^1.0.0-beta.3",
     "@eslint/js": "^9.21.0",
+    "@tailwindcss/vite": "^4.0.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -24,6 +24,7 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "tailwindcss": "^4.0.17",
     "vite": "^6.2.0"
   }
 }
